--- a/src/components/recipe-list.css
+++ b/src/components/recipe-list.css
@@ -44,3 +44,18 @@
   border-radius: 4px;
   margin: 20px auto 0;
 }
+.remove {
+  font-size: 0.6em;
+  color: #555;
+  cursor: pointer;
+  text-align: right;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0.3em 0.5em;
+  transition: all 0.3s ease;
+}
+.remove:hover {
+  color: red;
+  font-weight: bold;
+}
